--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 Sadanghaeng/Sadanghaeng.xcodeproj/project.xcworkspace/xcuserdata/
 
 Sadanghaeng/Sadanghaeng.xcodeproj/project.xcworkspace/xcuserdata/godong9.xcuserdatad/UserInterfaceState.xcuserstate
+
+Sadanghaeng/Pods
+Sadanghaeng/Podfile.lock
