--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ Sadanghaeng/Sadanghaeng.xcodeproj/project.xcworkspace/xcuserdata/godong9.xcuserd
 
 Sadanghaeng/Pods
 Sadanghaeng/Podfile.lock
+Sadanghaeng/Sadanghaeng.xcodeproj/project.pbxproj
