--- a/Sadanghaeng/Podfile
+++ b/Sadanghaeng/Podfile
@@ -1,5 +1,17 @@
-source 'https://github.com/CocoaPods/Specs.git'
-platform :ios, '8.0'
-use_frameworks!
+# Uncomment this line to define a global platform for your project
+# platform :ios, '8.0'
+# Uncomment this line if you're using Swift
+# use_frameworks!
 
-pod 'Alamofire', '~> 3.0'
+target 'Sadanghaeng' do
+
+end
+
+target 'SadanghaengTests' do
+
+end
+
+target 'SadanghaengUITests' do
+
+end
+
