--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,21 @@
-Sadanghaeng/Sadanghaeng.xcodeproj/project.xcworkspace/xcuserdata/
+# Xcode
+.DS_Store
+*/build/*
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+xcuserdata
+profile
+*.moved-aside
+DerivedData
+.idea/
+*.hmap
+*.xccheckout
 
-Sadanghaeng/Sadanghaeng.xcodeproj/project.xcworkspace/xcuserdata/godong9.xcuserdatad/UserInterfaceState.xcuserstate
-
-Sadanghaeng/Pods
-Sadanghaeng/Podfile.lock
-Sadanghaeng/Sadanghaeng.xcodeproj/project.pbxproj
+#CocoaPods
+Pods
