--- a/Sadanghaeng/Podfile
+++ b/Sadanghaeng/Podfile
@@ -5,6 +5,7 @@ use_frameworks!
 
 source 'https://github.com/CocoaPods/Specs.git'
 pod 'Alamofire', '~> 3.0'
+pod 'AutoKeyboardScrollView', :path => '../'
 
 target 'Sadanghaeng' do
 
